styles/main.css
*{
    box-sizing: border-box;
    margin: 0;
}
body{
    background-color:#f8c69a ;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    line-height: 2rem;
    padding-top: 110px;
    
}
main{
 top : 120px;
 position: absolute;
}

a:link{
    cursor: pointer;
}
.mainNavContainer {
     display: flex;
     margin: 5px;
     gap: 20px;
     flex-direction: row;
    justify-content: flex-end;
    font-size: 1rem;
    line-height: 1rem;
    position: absolute;
    white-space: nowrap;
    flex-wrap: nowrap;
    top: 20px;
    right: 100px;
    padding: 1rem;
    border-radius: 10px;
   
     
}
.mainNavContainer a:hover{
    background-color:#f1750f ;

}

.mainNavContainer a {
    color: white; 
    margin: 5px;
    background-color: rgba(255, 168, 6, 0.63);
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    padding: 5px;
    border-radius: 25px;
    font-size: 1rem;
    text-decoration: none;
    text-align: center;
}
/* keep header on top of other elements */

header{
    background-color: antiquewhite;
    display: flex;
    position: fixed;
    justify-content: space-between;
    align-items: center;
    top:0;
    left:0;
    padding: 10px 20px;
    width: 100%;
    z-index: 1000;
    box-shadow: 4px 4px 8px rgba(255, 168, 6, 0.63);
}
.h1headers{
    background-color:#f8c69a ;
    display: flex;
 
   
}

#logo{
    top: 0;
    left: 0;
    position: relative;
    /* z-index: 1000; */
    width: 80px;
    margin-bottom: 10px;
    height: auto;
}
.form-containers{
    display: grid;
    column-gap: 150px;
    grid-template-columns: 25% 30% ;
    padding: 0px;
    /* will activate them later  */
  display: inline;
}
.form-containers > div{
    border: 1px red;
}

form{
    border: 20px;
    padding: auto;
    /* display: flex; */
    flex-wrap: wrap;
    justify-content: space-between;
     box-shadow: 4px 4px 8px;
     padding: 20px;
     margin-bottom: 12px;
     border-radius: 12px;
     margin-top: 10px;
   
    

}
.form-containers{
 margin-left: 10px;
}

input{

    height: 28px;
    padding: 2px;
    border: 2px solid ;
    text-align: center;
    width:100%;
    margin: 5x;

}
input[type = submit ]{
 cursor: pointer;
 margin: 5px;
 text-align: center;
 width: 30%;
 border-radius: 25px;
 
}
.container{
    display: grid;
    column-gap: 100px;
    grid-template-columns: auto auto auto;
    padding: 20px;

}
.container > div{
   
    text-align: center;
    border: 2px solid red;
    font-weight: 20%;
}

.formSubmitBtns{
    display: block;
}
img{
    max-width: 100%;
    height: auto;
}

.check{
    display: none;
}

/* icon hamburger menu this css will be made functional with the use of Javascript*/

.checkbtn{
    font-size: 30px;
    cursor: pointer;
    display: block;
    width: 20px;
    height: 25px;
    color: black;
}


.container-footer{
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  max-width: 1200px;
  margin: 40px auto 0 auto;
  background-color: orange;
}
.aboutUsDiv{
    display: flex;   
    box-shadow: #333333;
    flex: 3;
    min-width: 100%;
    max-width: 30%;
    border: #f1750f 5px solid;
    overflow: auto;
  
}
.mainDiv{
      display: block;
    column-gap: 5px;
    grid-template-columns: auto auto auto;
    padding: 10px;
}

.containerServices{
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.logosDiv{
    display: flex;
    column-gap: 10px;
    border: #f1750f solid;
    flex-direction: column;
    position: relative;
    grid-template-columns: auto auto auto;
}
main{
    border: #f1750f solid 1px;
    margin: 50px;
}

/* contact us style */

.map{
    border: #f1750f solid 2px;
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
  justify-content: space-between;
    align-items: flex-start;
    margin: 20px 0 10px;
    
    
}
.map>div,
.map iframe{
 flex: 1 1 300px;
 max-width: 400px;
 min-width: 250px;
 width: 100%;
 
}
.contact-info{
 font-size: 1rem;
border-radius: 10px;
padding: 10px;
margin-top: 10px;
height: 380px;
box-shadow: 4px 4px 8px;


}
.socialMediaContainer{
 width: 30px;
 display: flex;
 gap: 10px;
}

.map iframe{
 margin-top: 10px;
 flex: 1 1 300px;
 max-width: 400px;
 min-width: 250px;
 width: 100%;
 height: 390px;
 border: #f1750f 3px solid;
 box-shadow: 4px 4px 12px rgba(0,0,0,0.3);
 border-radius: 10px;
 
}
/* homepage style */
.HomepageStickerImg{
 display: block;
 overflow: hidden;
 margin: 20px;
width:50%;
 height: auto;

}

.slideImg{
    display: grid;
}
.column{
  float: left;
  width: 100%;
  padding: 5px;
  display: flex;
  box-shadow: 4px 4px 12px rgba(0,0,0,0.3);
 border-radius: 10px;
}
.row{
 display: flex;
}

/* homepage style */
.minigallery{
width: 30%;
height: auto;
display: block;
margin-left: 50px;
align-self: center;

}

.articles, .article-three, .article-four{
    border-radius: 10px;
    border: #f1750f solid 3px;
    box-shadow: 4px 4px 4px 4px rgba(255, 168, 6, 0.63);
}
.articles, .article-three, .article-four, h2{
    color:white;
    text-align: center;
    margin-top: 10px;
}
a {
    text-decoration: none;
    color: inherit;
    
}




/* tournament page */
.tournaments{
    display: grid;
    grid-template-columns: auto auto;
    gap: 50px;
    justify-content: space-between;
    grid-template-areas:'container-footer' ;
    padding: 20px;
    box-shadow: 4px 4px 12px rgba(0,0,0,0.3);
    border-radius: 10px;    
    border: #f1750f solid 2px;
    margin-bottom: 20px;
    height: auto;
}
#tourneyBtn{
    border-radius: 5px;
    padding: 5px;
}


.tournamentInfo{
    display: grid;
    grid-template-columns: repeat(4 , 1fr);
    gap: 20px;
    justify-content: space-between;

    padding: 20px;
}
.column1{
 
    flex: 1;
    box-shadow: 4px 4px 12px rgba(0,0,0,0.3);
    border-radius: 10px;
    padding: 10px;
    border: #f1750f solid 2px;
    max-width: 100%;
    height: auto;
}
.column1 :last-child{
 margin-right:10px ;
 max-width: 100%;
}
.article-Container{
    display: grid;
    column-gap: 50px;
    grid-template-columns: 1fr 1fr 1fr;
}


/* service page style */


.card1, .card2, .card3,.card4{
    border-radius: 10px;
    border: #f1750f solid 3px;
    box-shadow: 4px 4px 4px 4px rgba(255, 168, 6, 0.63);
    text-align: center;
    padding: 10px;
}



    input[type = submit ]{
 margin: 5px;
 text-align: center;
 width: 80%;
 font-size: 14px;
 margin-bottom: 10px;
 padding: 8px 5px;
 display: block;
 border-radius: 25px;
 
 
    }
   .mainNavContainer{
    gap: 1rem;
    align-items: center;
    padding: 1rem;
    position: absolute;
    top: 70px;
    right: 0;
    width: 200px;
    font-size: 1rem;
    line-height: 1rem;

}

#mobi-menu:checked ~.mainNavContainer{
    display: flex;
}
.mobi-menuIcon{
  display: block;
}
img{
    max-width: 100%;
    height: auto;
    
}

.menuMobiDiv{
    display: none;
}
/* for small screens and mobile phones */
@media(max-width:600px){
    body{
        font-size: 13px;
        line-height: 1.4rem;
        padding: 0 5px;
    }
    img,.logo{
        max-width: 120px;
        height: auto;
    }
 img{
    width: 100%;
    height: auto;
 }
 .mainNavContainer{
  display: grid;
  align-items: flex-end;
  position: absolute;
  top: 0;
  gap:2px;
  right: 0;
  padding: 10px;
  z-index: 999;
      grid-template-columns: 1fr;

 }

  .mainNavContainer a {
    color: white; 
    margin: 1px;
    background-color: rgba(255, 168, 6, 0.63);
    font-weight: bold;
    font-family: 'Times New Roman', Times, serif;
    padding: 5px;
    font-size: 14px;
    text-decoration: none;
    text-align: center;
    width: 100px;
    height: auto;
    position: relative;
}


 .footer{
    display: block;
    margin: auto;
    padding: 10px;
    text-align: center;
    font-size: 14px;
    background-color: orange;
    color: white;
    box-shadow: 4px 4px 8px rgba(255, 168, 6, 0.63);
    max-width: 100%;
    height: auto;
    margin-top: 20px;
 }
 .minigallery{
width: 30%;
height: auto;
display: none;
margin-left: 50px;
align-self: center;

}
.articles, .article-three, .article-four, h2{
    font-size: 14px;
}

 #mobileMain{

 }
}

